--- a/branches/dev-issue-20/MyNightOut/src/mynightout/ui/CreateReservationForm.form
+++ b/branches/dev-issue-20/MyNightOut/src/mynightout/ui/CreateReservationForm.form
@@ -98,12 +98,13 @@
     <Component class="javax.swing.JComboBox" name="reservationNightClubSelection">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="5">
-            <StringItem index="0" value="&#x39c;&#x3b1;&#x3c2; &#x3c0;&#x3ae;&#x3c1;&#x3b1;&#x3bd; &#x3b5;&#x3af;&#x3b4;&#x3b7;&#x3c3;&#x3b7;.."/>
-            <StringItem index="1" value="&#x3a1;&#x3b1;&#x3bd;&#x3c4;&#x3b5;&#x3b2;&#x3bf;&#x3cd;"/>
-            <StringItem index="2" value="13 &#x3a6;&#x3b5;&#x3b3;&#x3b3;&#x3ac;&#x3c1;&#x3b9;&#x3b1;"/>
-            <StringItem index="3" value="Item 4"/>
-            <StringItem index="4" value="Item 5"/>
+          <StringArray count="6">
+            <StringItem index="0" value="&#x395;&#x3c0;&#x3b9;&#x3bb;&#x3ad;&#x3be;&#x3c4;&#x3b5; &#x39a;&#x3b1;&#x3c4;&#x3b1;&#x3c3;&#x3c4;&#x3b7;&#x3bc;&#x3b1;..."/>
+            <StringItem index="1" value="&#x39c;&#x3b1;&#x3c2; &#x3c0;&#x3ae;&#x3c1;&#x3b1;&#x3bd; &#x3b5;&#x3af;&#x3b4;&#x3b7;&#x3c3;&#x3b7;.."/>
+            <StringItem index="2" value="&#x3a1;&#x3b1;&#x3bd;&#x3c4;&#x3b5;&#x3b2;&#x3bf;&#x3cd;"/>
+            <StringItem index="3" value="13 &#x3a6;&#x3b5;&#x3b3;&#x3b3;&#x3ac;&#x3c1;&#x3b9;&#x3b1;"/>
+            <StringItem index="4" value="Item 4"/>
+            <StringItem index="5" value="Item 5"/>
           </StringArray>
         </Property>
       </Properties>
@@ -127,6 +128,7 @@
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="reservationDateChooser">
       <Properties>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="dateFormatString" type="java.lang.String" value="dd/MM/yyyy"/>
       </Properties>
     </Component>
@@ -134,6 +136,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x386;&#x3ba;&#x3c5;&#x3c1;&#x3bf;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="reservationButtonCloseActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
