--- a/branches/dev-issue-05/MyNightOut/MyNightOut/MyNightOut/src/mynightout/ui/DeleteReservationForm.form
+++ b/branches/dev-issue-05/MyNightOut/MyNightOut/MyNightOut/src/mynightout/ui/DeleteReservationForm.form
@@ -75,6 +75,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="IDInput">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="IDInputActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Cancel">
       <Properties>
