--- a/branches/dev-issue-05/MyNightOut/MyNightOut/MyNightOut/src/mynightout/ui/DeleteReservationForm.form
+++ b/branches/dev-issue-05/MyNightOut/MyNightOut/MyNightOut/src/mynightout/ui/DeleteReservationForm.form
@@ -29,7 +29,7 @@
                       <EmptySpace min="-2" pref="110" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" pref="81" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="IDInput" min="-2" pref="79" max="-2" attributes="0"/>
+                      <Component id="GivenId" min="-2" pref="79" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="135" max="-2" attributes="0"/>
@@ -49,7 +49,7 @@
               <EmptySpace pref="97" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel1" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                  <Component id="IDInput" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                  <Component id="GivenId" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
               <Component id="Delete" min="-2" max="-2" attributes="0"/>
@@ -74,9 +74,9 @@
         <Property name="text" type="java.lang.String" value="ID"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="IDInput">
+    <Component class="javax.swing.JTextField" name="GivenId">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="IDInputActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="GivenIdActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Cancel">
