--- a/branches/dev-issue-36/MyNightOut/MyNightOut/src/mynightout/ui/CancelBookForm.form
+++ b/branches/dev-issue-36/MyNightOut/MyNightOut/src/mynightout/ui/CancelBookForm.form
@@ -121,6 +121,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x394;&#x3ce;&#x3c3;&#x3c4;&#x3b5; &#x3c4;&#x3bf; &#x3cc;&#x3bd;&#x3bf;&#x3bc;&#x3b1; &#x3c0;&#x3bf;&#x3c5; &#x3ad;&#x3b3;&#x3b9;&#x3bd;&#x3b5; &#x3b7; &#x3ba;&#x3c1;&#x3ac;&#x3c4;&#x3b7;&#x3c3;&#x3b7; &#x3ba;&#x3b1;&#x3b9; &#x3c4;&#x3bf;&#x3bd; &#x3b1;&#x3c1;&#x3b9;&#x3b8;&#x3bc;&#x3cc; &#x3ba;&#x3c1;&#x3ac;&#x3c4;&#x3b7;&#x3c3;&#x3b7;&#x3c2;."/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
