--- a/MyNightOut/src/mynightout/ui/CreateBookForm.form
+++ b/MyNightOut/src/mynightout/ui/CreateBookForm.form
@@ -40,8 +40,8 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Component id="reservationPartyNumberTextField" alignment="0" max="32767" attributes="0"/>
-                          <Component id="reservationDateChooser" alignment="0" max="32767" attributes="0"/>
-                          <Component id="reservationNightClubSelection" min="-2" pref="150" max="-2" attributes="0"/>
+                          <Component id="reservationNightClubSelection" pref="150" max="32767" attributes="0"/>
+                          <Component id="reservationDateChooser" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -69,13 +69,15 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="reservationDateLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="reservationDateChooser" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="reservationDateLabel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                      <Component id="reservationOkButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="reservationButtonClose" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="reservationDateChooser" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
-              <Component id="reservationOkButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="reservationButtonClose" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -126,12 +128,6 @@
         <Property name="text" type="java.lang.String" value="&#x395;&#x3c0;&#x3b9;&#x3bb;&#x3bf;&#x3b3;&#x3ae; &#x397;&#x3bc;&#x3b5;&#x3c1;&#x3bf;&#x3bc;&#x3b7;&#x3bd;&#x3af;&#x3b1;&#x3c2;"/>
       </Properties>
     </Component>
-    <Component class="com.toedter.calendar.JDateChooser" name="reservationDateChooser">
-      <Properties>
-        <Property name="toolTipText" type="java.lang.String" value=""/>
-        <Property name="dateFormatString" type="java.lang.String" value="dd/MM/yyyy"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="reservationButtonClose">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x386;&#x3ba;&#x3c5;&#x3c1;&#x3bf;"/>
@@ -139,6 +135,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="reservationButtonCloseActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="com.toedter.calendar.JDateChooser" name="reservationDateChooser">
+      <Properties>
+        <Property name="dateFormatString" type="java.lang.String" value="dd/MM/yyyy"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
